Refactor import statements and detector class names for consistency in all flare detection notebooks

--- a/notebooks/flare_detect_DS_Tuc_A.ipynb
+++ b/notebooks/flare_detect_DS_Tuc_A.ipynb
@@ -7,11 +7,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from src.plarepy_DS_Tuc_A import FlareDetector_DS_Tuc_A\n",
+    "\n",
     "import numpy as np\n",
     "import plotly.graph_objects as go\n",
+    "from numpy.polynomial import Polynomial\n",
     "from plotly.subplots import make_subplots\n",
-    "from numpy.polynomial import Polynomial"
+    "\n",
+    "from src.flarepy_DS_Tuc_A import FlareDetector_DS_Tuc_A"
    ]
   },
   {
