Standardize operator spacing and mathematical expressions

--- a/notebooks/flare_detect_DS_Tuc_A.ipynb
+++ b/notebooks/flare_detect_DS_Tuc_A.ipynb
@@ -156,7 +156,7 @@
     "    sum_obs_time += detector.precise_obs_time\n",
     "print(sum_flare_number)\n",
     "print(sum_obs_time)\n",
-    "frequency = sum_flare_number/sum_obs_time\n",
+    "frequency = sum_flare_number / sum_obs_time\n",
     "print(frequency)"
    ]
   },
@@ -102210,7 +102210,7 @@
    ],
    "source": [
     "time = detectors[\"detector_s0027\"].tessBJD\n",
-    "flux = detectors[\"detector_s0027\"].mPDCSAPflux*100\n",
+    "flux = detectors[\"detector_s0027\"].mPDCSAPflux * 100\n",
     "\n",
     "diff_bjd = np.diff(detectors[\"detector_s0027\"].tessBJD)\n",
     "gap_indices = np.where(diff_bjd >= 0.2)[0]\n",
@@ -102327,14 +102327,10 @@
    "outputs": [],
    "source": [
     "total_bjd = np.array([])\n",
-    "total_flux = np.array([])*100-100\n",
-    "for  detector in detectors.values():\n",
-    "    total_bjd = np.append(\n",
-    "        total_bjd, detector.tessBJD\n",
-    "    )\n",
-    "    total_flux = np.append(\n",
-    "        total_flux, detector.mPDCSAPflux\n",
-    "    )\n",
+    "total_flux = np.array([]) * 100 - 100\n",
+    "for detector in detectors.values():\n",
+    "    total_bjd = np.append(total_bjd, detector.tessBJD)\n",
+    "    total_flux = np.append(total_flux, detector.mPDCSAPflux)\n",
     "\n",
     "diff_bjd = np.diff(total_bjd)\n",
     "gap_indices = np.where(diff_bjd >= 0.2)[0]\n",
@@ -102409,7 +102405,7 @@
    "outputs": [],
    "source": [
     "time = detectors[\"detector_s0049\"].tessBJD\n",
-    "flux = detectors[\"detector_s0049\"].mPDCSAPflux*100\n",
+    "flux = detectors[\"detector_s0049\"].mPDCSAPflux * 100\n",
     "\n",
     "diff_bjd = np.diff(detectors[\"detector_s0049\"].tessBJD)\n",
     "gap_indices = np.where(diff_bjd >= 0.2)[0]\n",
@@ -102579,9 +102575,9 @@
    "outputs": [],
    "source": [
     "# plot_energy() メソッドでエネルギーをプロット\n",
-    "for  detector in detectors.values():\n",
-    "  detector.plot_flare()\n",
-    "  detector.plot_energy()"
+    "for detector in detectors.values():\n",
+    "    detector.plot_flare()\n",
+    "    detector.plot_energy()"
    ]
   },
   {
@@ -102594,17 +102590,17 @@
     "# 配列の要素数に注意する必要が多分ある。\n",
     "# s2mPDCSAPflux をプロット\n",
     "for name, instance in detectors.items():\n",
-    "  # print(instance.tessBJD)\n",
-    "  # print(instance.s2mPDCSAPflux)\n",
-    "  fig = px.scatter(\n",
-    "    x=instance.tessBJD,\n",
-    "    y=instance.s2mPDCSAPflux,\n",
-    "    title=f\"TESS BJD vs PDCSAP Flux ({name})\",\n",
-    "    labels={\"x\": \"TESS BJD\", \"y\": \"PDCSAP Flux\"}\n",
-    "  )\n",
-    "  fig.update_traces(marker=dict(size=1), name=\"Flux Data\")\n",
-    "  fig.update_layout(showlegend=True)\n",
-    "  fig.show()"
+    "    # print(instance.tessBJD)\n",
+    "    # print(instance.s2mPDCSAPflux)\n",
+    "    fig = px.scatter(\n",
+    "        x=instance.tessBJD,\n",
+    "        y=instance.s2mPDCSAPflux,\n",
+    "        title=f\"TESS BJD vs PDCSAP Flux ({name})\",\n",
+    "        labels={\"x\": \"TESS BJD\", \"y\": \"PDCSAP Flux\"},\n",
+    "    )\n",
+    "    fig.update_traces(marker=dict(size=1), name=\"Flux Data\")\n",
+    "    fig.update_layout(showlegend=True)\n",
+    "    fig.show()"
    ]
   },
   {
