Correct detector class instantiation and usage throughout notebooks

--- a/notebooks/flare_detect_DS_Tuc_A.ipynb
+++ b/notebooks/flare_detect_DS_Tuc_A.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "        # FlareDetectorクラスのインスタンスを作成\n",
     "        # process_data=True にすると、データの読み込みと処理が自動で行われる\n",
-    "        detector = DSTucAFlareDetector(file=file_path, process_data=True)\n",
+    "        detector = FlareDetector_DS_Tuc_A(file=file_path, process_data=True)\n",
     "\n",
     "        # インスタンスを辞書に格納\n",
     "        detectors[instance_name] = detector\n",
