Refactor for-loop structure and indentation for detector iterations

--- a/notebooks/flare_detect_DS_Tuc_A.ipynb
+++ b/notebooks/flare_detect_DS_Tuc_A.ipynb
@@ -167,11 +167,10 @@
    "outputs": [],
    "source": [
     "sflux = np.array([])\n",
-    "for  detector in detectors.values():\n",
-    "  sflux = np.append(\n",
-    "    sflux , detector.mPDCSAPflux * detector.flux_mean)\n",
-    "  ave = np.mean(sflux)\n",
-    "  print(f\"mean={detector.flux_mean}\")\n",
+    "for detector in detectors.values():\n",
+    "    sflux = np.append(sflux, detector.mPDCSAPflux * detector.flux_mean)\n",
+    "    ave = np.mean(sflux)\n",
+    "    print(f\"mean={detector.flux_mean}\")\n",
     "print(ave)"
    ]
   },
