Refactor Lomb-Scargle periodogram and frequency/period search logic

--- a/notebooks/flare_detect_DS_Tuc_A.ipynb
+++ b/notebooks/flare_detect_DS_Tuc_A.ipynb
@@ -102279,14 +102279,13 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "#2.4～3.0を1000等分して、その中のどれが自転周期なのかを探す\n",
-    "frequency = 1/np.linspace(1.0,8.0,10000)\n",
+    "\n",
+    "# 2.4～3.0を1000等分して、その中のどれが自転周期なのかを探す\n",
+    "frequency = 1 / np.linspace(1.0, 8.0, 10000)\n",
     "total_power = np.array([])\n",
-    "for  detector in detectors.values():\n",
-    "    total_power = np.append(\n",
-    "        total_power, detector.power\n",
-    "    )\n",
-    "period = 1/frequency\n",
+    "for detector in detectors.values():\n",
+    "    total_power = np.append(total_power, detector.power)\n",
+    "period = 1 / frequency\n",
     "plt.plot(period, detectors[\"detector_s0027\"].power)"
    ]
   },
