Refactor energy and amplitude calculations and related plotting

--- a/notebooks/flare_detect_DS_Tuc_A.ipynb
+++ b/notebooks/flare_detect_DS_Tuc_A.ipynb
@@ -103799,20 +103799,16 @@
    "outputs": [],
    "source": [
     "max_energy = np.array([])\n",
-    "for  detector in detectors.values():\n",
-    "    energy_cor=np.sort(detector.energy)\n",
-    "    max_energy = np.append(\n",
-    "        max_energy, energy_cor[-1]\n",
-    "    )\n",
-    "    max_energy = np.append(\n",
-    "        max_energy, energy_cor[-2]\n",
-    "    )\n",
+    "for detector in detectors.values():\n",
+    "    energy_cor = np.sort(detector.energy)\n",
+    "    max_energy = np.append(max_energy, energy_cor[-1])\n",
+    "    max_energy = np.append(max_energy, energy_cor[-2])\n",
     "amplitudes = np.repeat(FlareDetector.array_amplitude, 2)\n",
     "fig = px.scatter(\n",
-    "  x=amplitudes,\n",
-    "  y=max_energy,\n",
-    "  labels={\"x\": \"明るさの振幅(黒点面積)\", \"y\": \"top2フレアのエネルギー\"},\n",
-    "  #hover_data={\"データ\": list(FlareDetector.array_data_name)} # ホバーした時にデータ名が表示されるようにする\n",
+    "    x=amplitudes,\n",
+    "    y=max_energy,\n",
+    "    labels={\"x\": \"明るさの振幅(黒点面積)\", \"y\": \"top2フレアのエネルギー\"},\n",
+    "    # hover_data={\"データ\": list(FlareDetector.array_data_name)} # ホバーした時にデータ名が表示されるようにする\n",
     ")\n",
     "fig.update_traces(marker=dict(size=10), name=\"Flare Energy\")\n",
     "fig.update_layout(showlegend=True)\n",
@@ -103826,17 +103822,15 @@
    "outputs": [],
    "source": [
     "max_energy = np.array([])\n",
-    "for  detector in detectors.values():\n",
-    "    energy_cor=np.sort(detector.energy)\n",
-    "    ave_max2_ene = (energy_cor[-1]+energy_cor[-2])/2\n",
-    "    max_energy = np.append(\n",
-    "        max_energy, ave_max2_ene\n",
-    "    )\n",
+    "for detector in detectors.values():\n",
+    "    energy_cor = np.sort(detector.energy)\n",
+    "    ave_max2_ene = (energy_cor[-1] + energy_cor[-2]) / 2\n",
+    "    max_energy = np.append(max_energy, ave_max2_ene)\n",
     "fig = px.scatter(\n",
-    "  x=FlareDetector.array_amplitude,\n",
-    "  y=max_energy,\n",
-    "  labels={\"x\": \"明るさの振幅(黒点面積)\", \"y\": \"top2フレアの平均エネルギー\"},\n",
-    "  hover_data={\"データ\": list(FlareDetector.array_data_name)} # ホバーした時にデータ名が表示されるようにする\n",
+    "    x=FlareDetector.array_amplitude,\n",
+    "    y=max_energy,\n",
+    "    labels={\"x\": \"明るさの振幅(黒点面積)\", \"y\": \"top2フレアの平均エネルギー\"},\n",
+    "    hover_data={\"データ\": list(FlareDetector.array_data_name)},  # ホバーした時にデータ名が表示されるようにする\n",
     ")\n",
     "fig.update_traces(marker=dict(size=10), name=\"Flare Energy\")\n",
     "fig.update_layout(showlegend=True)\n",
@@ -103850,16 +103844,14 @@
    "outputs": [],
    "source": [
     "max_energy = np.array([])\n",
-    "for  detector in detectors.values():\n",
-    "    energy_cor=np.sort(detector.energy)\n",
-    "    max_energy = np.append(\n",
-    "        max_energy, energy_cor[-1]\n",
-    "    )\n",
+    "for detector in detectors.values():\n",
+    "    energy_cor = np.sort(detector.energy)\n",
+    "    max_energy = np.append(max_energy, energy_cor[-1])\n",
     "fig = px.scatter(\n",
-    "  x=FlareDetector.array_amplitude,\n",
-    "  y=max_energy,\n",
-    "  labels={\"x\": \"明るさの振幅(黒点面積)\", \"y\": \"フレアの最大エネルギー\"},\n",
-    "  hover_data={\"データ\": list(FlareDetector.array_data_name)} # ホバーした時にデータ名が表示されるようにする\n",
+    "    x=FlareDetector.array_amplitude,\n",
+    "    y=max_energy,\n",
+    "    labels={\"x\": \"明るさの振幅(黒点面積)\", \"y\": \"フレアの最大エネルギー\"},\n",
+    "    hover_data={\"データ\": list(FlareDetector.array_data_name)},  # ホバーした時にデータ名が表示されるようにする\n",
     ")\n",
     "fig.update_traces(marker=dict(size=10), name=\"Flare Energy\")\n",
     "fig.update_layout(showlegend=True)\n",
@@ -103873,16 +103865,14 @@
    "outputs": [],
    "source": [
     "min_energy = np.array([])\n",
-    "for  detector in detectors.values():\n",
-    "    energy_cor=np.sort(detector.energy)\n",
-    "    min_energy = np.append(\n",
-    "        min_energy, energy_cor[0]\n",
-    "    )\n",
+    "for detector in detectors.values():\n",
+    "    energy_cor = np.sort(detector.energy)\n",
+    "    min_energy = np.append(min_energy, energy_cor[0])\n",
     "fig = px.scatter(\n",
-    "  x=FlareDetector.array_amplitude,\n",
-    "  y=min_energy,\n",
-    "  labels={\"x\": \"明るさの振幅(黒点面積)\", \"y\": \"フレアの最小エネルギー\"},\n",
-    "  hover_data={\"データ\": list(FlareDetector.array_data_name)} # ホバーした時にデータ名が表示されるようにする\n",
+    "    x=FlareDetector.array_amplitude,\n",
+    "    y=min_energy,\n",
+    "    labels={\"x\": \"明るさの振幅(黒点面積)\", \"y\": \"フレアの最小エネルギー\"},\n",
+    "    hover_data={\"データ\": list(FlareDetector.array_data_name)},  # ホバーした時にデータ名が表示されるようにする\n",
     ")\n",
     "fig.update_traces(marker=dict(size=10), name=\"Flare Energy\")\n",
     "fig.update_layout(showlegend=True)\n",
@@ -103896,33 +103886,29 @@
    "outputs": [],
    "source": [
     "min_energy = np.array([])\n",
-    "for  detector in detectors.values():\n",
-    "    energy_cor=np.sort(detector.energy)\n",
-    "    min_energy = np.append(\n",
-    "        min_energy, energy_cor[0]\n",
-    "    )\n",
+    "for detector in detectors.values():\n",
+    "    energy_cor = np.sort(detector.energy)\n",
+    "    min_energy = np.append(min_energy, energy_cor[0])\n",
     "max_energy = np.array([])\n",
-    "for  detector in detectors.values():\n",
-    "    energy_cor=np.sort(detector.energy)\n",
-    "    max_energy = np.append(\n",
-    "        max_energy, energy_cor[-1]\n",
-    "    )\n",
+    "for detector in detectors.values():\n",
+    "    energy_cor = np.sort(detector.energy)\n",
+    "    max_energy = np.append(max_energy, energy_cor[-1])\n",
     "fig = px.scatter(\n",
-    "  x=max_energy,\n",
-    "  y=min_energy,\n",
-    "  labels={\"x\": \"フレアの最大エネルギー\", \"y\": \"フレアの最小エネルギー\"},\n",
-    "  hover_data={\"データ\": list(FlareDetector.array_data_name)} # ホバーした時にデータ名が表示されるようにする\n",
+    "    x=max_energy,\n",
+    "    y=min_energy,\n",
+    "    labels={\"x\": \"フレアの最大エネルギー\", \"y\": \"フレアの最小エネルギー\"},\n",
+    "    hover_data={\"データ\": list(FlareDetector.array_data_name)},  # ホバーした時にデータ名が表示されるようにする\n",
     ")\n",
     "\n",
-    "coeffs = np.polyfit(max_energy,min_energy,1)\n",
+    "coeffs = np.polyfit(max_energy, min_energy, 1)\n",
     "linear_fit = np.poly1d(coeffs)\n",
     "\n",
     "fit_y = linear_fit(max_energy)\n",
     "\n",
-    "fig.add_scatter(x=max_energy, y=fit_y, mode='lines', name='線形フィッティング線')\n",
+    "fig.add_scatter(x=max_energy, y=fit_y, mode=\"lines\", name=\"線形フィッティング線\")\n",
     "\n",
     "fig.update_traces(marker=dict(size=10), name=\"Flare Energy\")\n",
-    "fig.update_layout(showlegend=True, height=1000,width=1000)\n",
+    "fig.update_layout(showlegend=True, height=1000, width=1000)\n",
     "fig.show()"
    ]
   },
