chore: 星面のノートブックを結合

--- a/notebooks/flare_detect_DS_Tuc_A.ipynb
+++ b/notebooks/flare_detect_DS_Tuc_A.ipynb
@@ -33,7 +33,7 @@
    "id": "0fe90cfc",
    "metadata": {},
    "source": [
-    "# DS_Tuc_A 軌跡データの処理"
+    "# DS_Tuc_A 軌跡データの処理\n"
    ]
   },
   {
@@ -55,12 +55,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "kyoto-flare-detection",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.13"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
