Revert "chore: 星面のノートブックを結合"
This reverts commit a5cdf7fc855edf6380ec402411573282e87ee820.

--- a/notebooks/flare_detect_DS_Tuc_A.ipynb
+++ b/notebooks/flare_detect_DS_Tuc_A.ipynb
@@ -33,7 +33,7 @@
    "id": "0fe90cfc",
    "metadata": {},
    "source": [
-    "# DS_Tuc_A 軌跡データの処理\n"
+    "# DS_Tuc_A 軌跡データの処理"
    ]
   },
   {
@@ -55,13 +55,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kyoto-flare-detection",
-   "language": "python",
+   "display_name": "Python 3",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.13.9"
+   "version": "3.13"
   }
  },
  "nbformat": 4,
