feat: notebookテンプレートとサンプルを更新
- flare_detect_template.ipynb: src/ベースの統合実装に対応
- flare_detect_DS_Tuc_A.ipynb: DS Tuc A固有機能を統合
- flare_detect_EK_Dra.ipynb: EK Dra検出テンプレート
- flare_detect_V889_Her.ipynb: V889 Her高度デトレンド対応
- BaseFlareDetectorの新機能（クラス変数、エネルギー閾値、ギャップ検出閾値）に対応
- process_data_2相当機能（skip_remove）をサポート

--- a/notebooks/flare_detect_template.ipynb
+++ b/notebooks/flare_detect_template.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# Flare Detector Template (EK Dra)\n",
-    "このノートブックでは `src.flarepy_EK_Dra.FlareDetector_EK_Dra` の基本的な使い方を示します。"
+    "\n",
+    "このノートブックでは `src.flarepy_EK_Dra.FlareDetector_EK_Dra` の基本的な使い方を示します。\n"
    ]
   },
   {
@@ -15,7 +16,8 @@
    "metadata": {},
    "source": [
     "## 1. Setup\n",
-    "Plotly Express と Graph Objects の両方を使用できるように準備します。"
+    "\n",
+    "Plotly Express と Graph Objects の両方を使用できるように準備します。\n"
    ]
   },
   {
@@ -27,6 +29,7 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import re\n",
     "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
@@ -47,7 +50,7 @@
    "id": "111d7c2e",
    "metadata": {},
    "source": [
-    "## 2. FITS ファイルの確認"
+    "## 2. FITS ファイルの確認\n"
    ]
   },
   {
@@ -68,7 +71,7 @@
    "id": "adaa7a30",
    "metadata": {},
    "source": [
-    "## 3. FlareDetector_EK_Dra で処理"
+    "## 3. FlareDetector_EK_Dra で処理\n"
    ]
   },
   {
@@ -92,7 +95,7 @@
    "id": "20fe61df",
    "metadata": {},
    "source": [
-    "## 4. サマリ"
+    "## 4. サマリ\n"
    ]
   },
   {
@@ -117,7 +120,7 @@
    "id": "fc70452f",
    "metadata": {},
    "source": [
-    "## 5. Plotly Express: Light Curve"
+    "## 5. Plotly Express: Light Curve\n"
    ]
   },
   {
@@ -140,7 +143,7 @@
    "id": "7a5a2a3a",
    "metadata": {},
    "source": [
-    "## 6. Plotly Express: Energy vs Time"
+    "## 6. Plotly Express: Energy vs Time\n"
    ]
   },
   {
@@ -163,7 +166,7 @@
    "id": "85a14a47",
    "metadata": {},
    "source": [
-    "## 7. Plotly Express: Flare Energy Histogram"
+    "## 7. Plotly Express: Flare Energy Histogram\n"
    ]
   },
   {
@@ -186,7 +189,7 @@
    "id": "9c8495a5",
    "metadata": {},
    "source": [
-    "## 8. Plotly Graph Objects: Light Curve"
+    "## 8. Plotly Graph Objects: Light Curve\n"
    ]
   },
   {
@@ -216,7 +219,7 @@
    "id": "652f5740",
    "metadata": {},
    "source": [
-    "## 9. 複数ファイルの処理例"
+    "## 9. 複数ファイルの処理例\n"
    ]
   },
   {
@@ -238,7 +241,7 @@
    "id": "1bd8ec92",
    "metadata": {},
    "source": [
-    "## 10. 追加解析"
+    "## 10. 追加解析\n"
    ]
   },
   {
