docs: 学習ノートに LombScargle 回転周期の内部実装と設計方針に関する詳細な説明を追加
- notebooks/learning/flare_learning_03_rotation_starspot.ipynb:
  - make_rotation_frequency_grid による正則周波数グリッド生成の仕組みを図解
  - method='auto' と 'fast' の違いと TESS データでの検証結果を記述
  - 星ごとの周期レンジ指定とパラメータ化の意図を説明
  - 従来の np.linspace(1/per_max, 1/per_min) との比較と移行理由を明記
  - コードセルをインスタンスパラメータを使う形に更新

--- a/notebooks/learning/flare_learning_03_rotation_starspot.ipynb
+++ b/notebooks/learning/flare_learning_03_rotation_starspot.ipynb
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "74185732",
       "metadata": {},
       "outputs": [
@@ -99,7 +99,7 @@
         "import pandas as pd\n",
         "import plotly.express as px\n",
         "from src.flarepy_EK_Dra import FlareDetector_EK_Dra\n",
-        "from src.base_flare_detector import ROTATION_FREQUENCY_GRID, _ROTATION_PERIODS\n",
+        "from src.base_flare_detector import make_rotation_frequency_grid\n",
         "\"\"\"EK Dra の 1 ファイルを process_data=True で処理し、回転周期と星黒点を調べる。\"\"\"\n",
         "\n",
         "\n",
@@ -132,6 +132,160 @@
     },
     {
       "cell_type": "markdown",
+      "id": "32d4822f",
+      "metadata": {},
+      "source": [
+        "## 2.1 `rotation_period()` の中で何が起きているか（実装ベースの解説）\n",
+        "\n",
+        "ここで一度、`BaseFlareDetector.rotation_period()` の中身を、数式とコードの両方の観点から整理しておきます。\n",
+        "\n",
+        "### (1) Lomb–Scargle 法そのもの\n",
+        "\n",
+        "観測データが\n",
+        "\n",
+        "- 観測時刻: \\(t_i\\)\n",
+        "- 正規化フラックス: \\(y_i\\)\n",
+        "\n",
+        "だとすると、Lomb–Scargle 法は\n",
+        "\n",
+        "\\[\n",
+        "y(t) \\approx A \\cos(2\\pi f t) + B \\sin(2\\pi f t)\n",
+        "\\]\n",
+        "\n",
+        "のような**正弦波モデル**を周波数 \\(f\\) ごとに当てはめ、\n",
+        "\n",
+        "- その周波数での「周期性の強さ」を表す **パワー** \\(P(f)\\)\n",
+        "\n",
+        "を計算します。これを\n",
+        "\n",
+        "- 横軸: 周波数 \\(f\\) あるいは周期 \\(P = 1/f\\)\n",
+        "- 縦軸: Lomb–Scargle パワー\n",
+        "\n",
+        "としてプロットしたものが、いわゆる **パワースペクトル** です。\n",
+        "\n",
+        "このノートでは、Astropy の `LombScargle` 実装を使って、\n",
+        "\n",
+        "```python\n",
+        "from astropy.timeseries import LombScargle\n",
+        "\n",
+        "lomb = LombScargle(tessBJD - tessBJD[0], mPDCSAPflux)\n",
+        "power = lomb.power(frequency, method=..., assume_regular_frequency=True)\n",
+        "```\n",
+        "\n",
+        "という形で計算しています。\n",
+        "\n",
+        "### (2) 周波数グリッド `frequency` はどう決まるか\n",
+        "\n",
+        "`BaseFlareDetector` では、2025-11 時点の実装で次のように\n",
+        "**「探索したい周期レンジ」をパラメータ化** しています。\n",
+        "\n",
+        "- `rotation_period_min` … 探索する周期の下限 [day]\n",
+        "- `rotation_period_max` … 探索する周期の上限 [day]\n",
+        "- `rotation_n_points` … グリッドの分割数\n",
+        "\n",
+        "これを渡して\n",
+        "\n",
+        "```python\n",
+        "from src.base_flare_detector import make_rotation_frequency_grid\n",
+        "\n",
+        "frequency, periods = make_rotation_frequency_grid(\n",
+        "    period_min=self.rotation_period_min,\n",
+        "    period_max=self.rotation_period_max,\n",
+        "    n_points=self.rotation_n_points,\n",
+        ")\n",
+        "```\n",
+        "\n",
+        "とすると、内部では\n",
+        "\n",
+        "- 周波数の範囲を\n",
+        "  \\(f*\\min = 1 / \\text{period_max}\\),\n",
+        "  \\(f*\\max = 1 / \\text{period_min}\\)\n",
+        "- その範囲を `n_points` 個で **等間隔 (linspace)** に分割\n",
+        "- 各周波数の逆数を取って対応する周期配列 `periods = 1.0 / frequency` を作成\n",
+        "\n",
+        "という処理が行われます。\n",
+        "\n",
+        "このようにすることで、\n",
+        "\n",
+        "- コード側では **周波数は等間隔**（FFT ベースの高速アルゴリズムが使える）\n",
+        "- 人間が図を見るときは **周期 [day] の軸で直感的に読める**\n",
+        "\n",
+        "という両立を図っています。\n",
+        "\n",
+        "### (3) 星ごとに異なる周期レンジ\n",
+        "\n",
+        "`rotation_period_min/max` の既定値は 1〜8 日ですが、\n",
+        "個々の星では archive/daijiro 版の実装に合わせて、\n",
+        "\n",
+        "- DS Tuc A: 1.0〜8.0 日\n",
+        "- EK Dra: 1.5〜5.0 日\n",
+        "- V889 Her: 0.3〜2.0 日\n",
+        "\n",
+        "のように派生クラス側で上書きしています。\n",
+        "そのため、このノートで扱っている EK Dra の `detector_ek` では、実際には\n",
+        "\n",
+        "```python\n",
+        "frequency, periods = make_rotation_frequency_grid(\n",
+        "    period_min=detector_ek.rotation_period_min,\n",
+        "    period_max=detector_ek.rotation_period_max,\n",
+        "    n_points=detector_ek.rotation_n_points,\n",
+        ")\n",
+        "```\n",
+        "\n",
+        "に相当するグリッドの上でパワースペクトルが計算されています。\n",
+        "\n",
+        "### (4) `method=\"auto\"` と `method=\"fast\"` の位置づけ\n",
+        "\n",
+        "`BaseFlareDetector` には `rotation_ls_method` という属性があり、\n",
+        "\n",
+        "- デフォルト: `\"auto\"`\n",
+        "- 必要に応じて: `\"fast\"` などに切り替え\n",
+        "\n",
+        "できるようになっています。\n",
+        "\n",
+        "Astropy の `method=\"auto\"` は、\n",
+        "\n",
+        "- データ点数や周波数グリッドの性質を見て\n",
+        "- 内部的に最適と思われるアルゴリズムを選択\n",
+        "\n",
+        "するヒューリスティックです。このノートや TESS データでは、\n",
+        "\n",
+        "- 周波数グリッドが等間隔\n",
+        "- サンプル時刻もほぼ等間隔\n",
+        "\n",
+        "であるため、`auto` でも内部的には fast (FFT ベース) が選ばれます。\n",
+        "\n",
+        "別途作成した `scripts/compare_rotation_lomb_methods.py` で\n",
+        "\n",
+        "- DS Tuc A / EK Dra / V889 Her の TESS データ全 FITS について\n",
+        "- `method=\"auto\"` と `\"fast\"` の自転周期を比較\n",
+        "\n",
+        "したところ、**全てのケースで周期が完全一致**することが確認できています。\n",
+        "したがって、このノートでは「まずは `auto` をデフォルトで使い、\n",
+        "必要に応じて `fast` を指定する」という方針を前提に読み進めて問題ありません。\n",
+        "\n",
+        "### (5) このノートで描いている図との対応\n",
+        "\n",
+        "この後のセルでは、\n",
+        "\n",
+        "- `detector_ek.power` … 先ほどの `frequency` グリッド上で計算されたパワー\n",
+        "- `periods` … その逆数 `1/frequency` を並べた配列\n",
+        "\n",
+        "を用いて、\n",
+        "\n",
+        "- 横軸: period [day]\n",
+        "- 縦軸: power\n",
+        "\n",
+        "のグラフを描いています。\n",
+        "\n",
+        "**重要なのは、「power と period の配列が同じグリッドに対応していること」**です。\n",
+        "`rotation_period()` はインスタンスごとに `rotation_period_min/max` を使ってグリッドを作っているので、\n",
+        "ノートブック側でも `make_rotation_frequency_grid` を使って同じ条件で `periods` を作るのが安全です。\n",
+        "このノートではその形に合わせてコードを少し調整しています。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "a22b67b4",
       "metadata": {},
       "source": [
@@ -151,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "4a3aadc9",
       "metadata": {},
       "outputs": [
@@ -1038,7 +1192,12 @@
         "if detector_ek is None or detector_ek.power is None:\n",
         "    print(\"detector_ek が未定義か、rotation_period がまだ計算されていません。\")\n",
         "else:\n",
-        "    periods = _ROTATION_PERIODS\n",
+        "    # BaseFlareDetector と同じ条件で周波数グリッドを生成し、その逆数を周期配列として使う\n",
+        "    frequency, periods = make_rotation_frequency_grid(\n",
+        "        period_min=detector_ek.rotation_period_min,\n",
+        "        period_max=detector_ek.rotation_period_max,\n",
+        "        n_points=detector_ek.rotation_n_points,\n",
+        "    )\n",
         "    power = detector_ek.power\n",
         "\n",
         "    print(\"len(periods):\", len(periods))\n",
