docs: 学習ノートブックを新規追加
- notebooks/flare_detect_V889_Her.ipynb: V889 Her のフレア検出デモノートブック（daijiro 版由来）
- notebooks/learning/flare_learning_04_star_specifics_DS_Tuc_A_V889_Her.ipynb:
  - DS Tuc A と V889 Her の恒星ごとの特殊処理を学ぶためのノートブック
  - トランジット除去・連星補正・フレア埋め込みデトレンドなどのカスタマイズ例を解説
- notebooks/learning/flare_learning_overview.ipynb:
  - フレア検出コード全体の学習ガイド
  - BaseFlareDetector と派生クラスの使い方・可視化・一括処理の入門を記載

--- a/notebooks/learning/flare_learning_overview.ipynb
+++ b/notebooks/learning/flare_learning_overview.ipynb
@@ -180,7 +180,7 @@
         {
           "data": {
             "text/plain": [
-              "<src.flarepy_EK_Dra.FlareDetector_EK_Dra at 0x112a281a0>"
+              "<src.flarepy_EK_Dra.FlareDetector_EK_Dra at 0x112c6c1a0>"
             ]
           },
           "execution_count": 4,
@@ -7837,7 +7837,7 @@
           "output_type": "stream",
           "text": [
             "DS_Tuc_A data dir: /Users/daisukeyamashiki/Documents/kyoto-flare-detection/data/TESS/DS_Tuc_A exists: True\n",
-            "V889_Her data dir: /Users/daisukeyamashiki/Documents/kyoto-flare-detection/data/TESS/V889_Her exists: False\n"
+            "V889_Her data dir: /Users/daisukeyamashiki/Documents/kyoto-flare-detection/data/TESS/V889_Her exists: True\n"
           ]
         }
       ],
@@ -7911,7 +7911,25 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "V889 Her のデータディレクトリが見つかりません: /Users/daisukeyamashiki/Documents/kyoto-flare-detection/data/TESS/V889_Her\n"
+            "V889 Her FITS files: 4\n",
+            "v889_example: /Users/daisukeyamashiki/Documents/kyoto-flare-detection/data/TESS/V889_Her/tess2020160202036-s0026-0000000471000657-0188-s_lc.fits\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------- Instance Summary --------\n",
+            "file: /Users/daisukeyamashiki/Documents/kyoto-flare-detection/data/TESS/V889_Her/tess2020160202036-s0026-0000000471000657-0188-s_lc.fits\n",
+            "tessBJD_length: 16942\n",
+            "flare_number: 15\n",
+            "sum_flare_energy: 4.649602491641955e+35\n",
+            "precise_obs_time: 23.94196645993702\n",
+            "flare_ratio: 0.0\n",
+            "\n",
+            "-------- Class Summary --------\n",
+            "array_flare_ratio length: 8\n",
+            "average_flare_ratio: 0.26473833561939353\n"
           ]
         }
       ],
